Added in code and data for stacked area chart visual

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -31,7 +31,6 @@
                 <div class="align-self-center">
                     <h1>American Time Usage</h1>
                     <h2>In the Era of the COVID-19 Pandemic</h2>
-                    <img src="./images/ImagePlaceholder.png" alt="Image Placeholder">
                 </div>
             </div>
 
@@ -39,6 +38,7 @@
             <!-- graph -->
             <div class="row justify-content-center" style="height: 60vh">
                 <div class="align-self-center" id="stacked-area-chart" style="height: 100%; width: 100%"></div>
+                <h6>What Percentage of Time is Spent on an Activity</h6>
             </div>
 
             <!-- brush -->
@@ -317,5 +317,7 @@
 <!-- Load data, create visualizations -->
 <script src="js/main.js"></script>
 <script src="js/racial-disparities.js"></script>
+<script src="js/stackedAreaChart.js"></script>
+
 </body>
 </html>
