implemented activity bubble chart viz

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -127,9 +127,7 @@
             </div>
 
             <div class="row justify-content-center" style="height: 60vh">
-                <div class="align-self-center"style="width: 100%">
-                    Insert Visualization Here
-                </div>
+                <div class="align-self-center" id="bubble-chart" style="width: 90%; height: 90%"></div>
             </div>
 
             <div class="row justify-content-center" style="height: 15vh">
@@ -318,6 +316,7 @@
 <script src="js/main.js"></script>
 <script src="js/racial-disparities.js"></script>
 <script src="js/stackedAreaChart.js"></script>
+<script src="js/BubbleChart.js"></script>
 
 </body>
 </html>
