started line chart

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -150,8 +150,7 @@
                 </div>
             </div>
             <div class="row justify-content-center" style="height: 60vh">
-                <div class="align-self-center"style="width: 100%">
-                    Insert Visualization Here
+                <div class="align-self-center" id="avg-hours-worked" style="width: 100%">
                 </div>
             </div>
 
