started line chart

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -316,6 +316,7 @@
 <script src="js/racial-disparities.js"></script>
 <script src="js/stackedAreaChart.js"></script>
 <script src="js/BubbleChart.js"></script>
+<script src="js/avgHoursWorked.js"></script>
 
 </body>
 </html>
