implemented gender top 5 pie charts

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -214,9 +214,8 @@
             </div>
 
             <div class="row justify-content-center" style="height: 75vh">
-                <div class="align-self-center"style="width: 100%">
-                    Insert Visualization Here
-                </div>
+                <div class="align-self-center" id="top-five-male" style="width: 50%; height: 50%"></div>
+                <div class="align-self-center" id="top-five-female" style="width: 50%; height: 50%"></div>
             </div>
         </div>
     </div>
@@ -316,6 +315,7 @@
 <script src="js/stackedAreaChart.js"></script>
 <script src="js/BubbleChart.js"></script>
 <script src="js/avgHoursWorked.js"></script>
+<script src="js/pieChart.js"></script>
 
 </body>
 </html>
