--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="row justify-content-center" style="height: 60vh">
-                <div class="align-self-center" id="avg-hours-worked" style="width: 100%"></div>
+                <div class="align-self-center" id="avg-hours-worked" style="height: 100%; width: 100%"></div>
             </div>
 
             <div class="row justify-content-center" style="height: 15vh">
