finished line plot

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -146,7 +146,7 @@
             <!-- header -->
             <div class="row justify-content-center" style="height: 15vh">
                 <div class="align-self-center">
-                    <h1>Average Hours Worked per week</h1>
+                    <h1>Average Hours Worked per Week by Income</h1>
                 </div>
             </div>
             <div class="row justify-content-center" style="height: 60vh">
@@ -155,7 +155,10 @@
 
             <div class="row justify-content-center" style="height: 15vh">
                 <div class="align-self-center" style="height: 100%; width: 80%">
-                    As can be seen by the visualization above, the average number of hours worked are pretty consistent before and during the pandemic.
+                    Each colored line represents a different year.
+                    The relationship between income and hours worked is pretty flat — with actually the highest and lowest income earners working the most hours.
+                    As can be seen by the visualization above, the average number of hours worked are quite
+                    consistent over the last two decades, including during the 2020 pandemic period.
                 </div>
             </div>
         </div>
