--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -20,6 +20,37 @@
 </head>
 <body>
 
+<!--Intro Page-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 offset-2"
+             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
+
+            <!-- header -->
+            <div class="row justify-content-center" style="height: 65vh">
+                <div class="align-self-center">
+                    <h1>American Time Usage</h1>
+                    <h2>in the Era of the COVID-19 Pandemic</h2>
+
+                    <h6>
+                        Each year, the Bureau of Labor Statistics surveys thousands of households for the
+                        American Time Usage Survey, a project which tracks how Americans spend their time.
+                        This data helps illuminate how our society affords access to work, to leisure, and beyond.
+                    </h6>
+                </div>
+            </div>
+
+
+
+
+            <!-- brush -->
+            <div class="row justify-content-center" style="height: 15vh">
+                <div class="align-self-center" id="timeline" style="height: 100%; width: 100%"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--First Page-->
 <div class="container-fluid">
     <div class="row">
@@ -29,21 +60,20 @@
             <!-- header -->
             <div class="row justify-content-center" style="height: 15vh">
                 <div class="align-self-center">
-                    <h1>American Time Usage</h1>
-                    <h2>In the Era of the COVID-19 Pandemic</h2>
+                    <h1>Time Usage Over the Last Two Decades</h1>
                 </div>
             </div>
-
 
             <!-- graph -->
             <div class="row justify-content-center" style="height: 60vh">
                 <div class="align-self-center" id="stacked-area-chart" style="height: 100%; width: 100%"></div>
-                <h6>What Percentage of Time is Spent on an Activity</h6>
             </div>
 
-            <!-- brush -->
-            <div class="row justify-content-center" style="height: 15vh">
-                <div class="align-self-center" id="timeline" style="height: 100%; width: 100%"></div>
+            <div class="row justify-content-center" style="height: 13vh">
+                <h6>Consistently throughout the data, the largest proportions of time
+                    are spent on work, education, and sleep. Occasionally, there are bumps in how much
+                    time certain activities get, like a bump around 2014 in "government activities" <i>(which might
+                        be related to voting in the midterm elections that year)</i>.</h6>
             </div>
         </div>
     </div>
