--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -39,20 +39,20 @@
                         We hope to analyze how time usage was affected by the 2020 COVID pandemic.
                     </h6>
                     <hr>
+                    <h2>How has time spent doing different activities changed before and during the pandemic?</h2>
                 </div>
             </div>
 
             <!-- graph -->
             <div class="row justify-content-center" style="height: 60vh">
-                <h5>Percentage Point Change in Time Usage from 2019 to 2020</h5>
                 <div class="align-self-center" id="change-bar-chart" style="height: 100%; width: 100%"></div>
 
             </div>
 
-            <!-- brush -->
-            <div class="row justify-content-center" style="height: 10vh">
-                <div class="align-self-center" id="timeline" style="height: 100%; width: 100%"></div>
-            </div>
+<!--            &lt;!&ndash; brush &ndash;&gt;-->
+<!--            <div class="row justify-content-center" style="height: 10vh">-->
+<!--                <div class="align-self-center" id="timeline" style="height: 100%; width: 100%"></div>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
@@ -90,34 +90,6 @@
             <!-- header -->
             <div class="row justify-content-center" style="height: 15vh">
                 <div class="align-self-center">
-                    <h1>Time Usage Over the Last Two Decades</h1>
-                </div>
-            </div>
-
-            <!-- graph -->
-            <div class="row justify-content-center" style="height: 60vh">
-                <div class="align-self-center" id="stacked-area-chart" style="height: 100%; width: 100%"></div>
-            </div>
-
-            <div class="row justify-content-center" style="height: 13vh">
-                <h6>Consistently throughout the data, the largest proportions of time
-                    are spent on work, education, and sleep. Occasionally, there are bumps in how much
-                    time certain activities get, like a bump around 2014 in "government activities" <i>(which might
-                        be related to voting in the midterm elections that year)</i>.</h6>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!--Third Page-->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-8 offset-2"
-             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
-
-            <!-- header -->
-            <div class="row justify-content-center" style="height: 15vh">
-                <div class="align-self-center">
                     <h1>Job Losses</h1>
                 </div>
             </div>
@@ -140,7 +112,7 @@
     </div>
 </div>
 
-<!--Fourth Page-->
+<!--Third Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -173,7 +145,7 @@
     </div>
 </div>
 
-<!--Fifth Page-->
+<!--Fourth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -201,7 +173,7 @@
     </div>
 </div>
 
-<!--Sixth Page-->
+<!--Fifth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -210,31 +182,26 @@
             <!-- header -->
             <div class="row justify-content-center" style="height: 15vh">
                 <div class="align-self-center">
-                    <h2 class="headingTitle">How has time spent doing different activities changed before and during the pandemic?</h2>
+                    <h1>Time Usage Over the Last Two Decades</h1>
                 </div>
             </div>
 
-            <div class="row justify-content-center" style="height: 75vh">
-                <div class="align-self-center"style="width: 100%">
-                    <div class="box">
-                        <div class="one">
-                            Insert Visualization Here
-                            <br>
-                            Increases
-                        </div>
-                        <div class="two">
-                            Insert Visualization Here
-                            <br>
-                            Decreases
-                        </div>
-                    </div>
-                </div>
+            <!-- graph -->
+            <div class="row justify-content-center" style="height: 60vh">
+                <div class="align-self-center" id="stacked-area-chart" style="height: 100%; width: 100%"></div>
+            </div>
+
+            <div class="row justify-content-center" style="height: 13vh">
+                <h6>Consistently throughout the data, the largest proportions of time
+                    are spent on work, education, and sleep. Occasionally, there are bumps in how much
+                    time certain activities get, like a bump around 2014 in "government activities" <i>(which might
+                        be related to voting in the midterm elections that year)</i>.</h6>
             </div>
         </div>
     </div>
 </div>
 
-<!--Seventh Page-->
+<!--Sixth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -271,7 +238,7 @@
     </div>
 </div>
 
-<!--Eighth Page-->
+<!--Seventh Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -298,7 +265,7 @@
     </div>
 </div>
 
-<!--Ninth Page-->
+<!--Eighth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -328,7 +295,7 @@
     </div>
 </div>
 
-<!--Tenth Page-->
+<!--Ninth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
