--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -27,32 +27,34 @@
              style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
 
             <!-- header -->
-            <div class="row justify-content-center" style="height: 40vh">
+            <div class="row justify-content-center" style="height: 60vh">
                 <div class="align-self-center">
                     <h1>American Time Usage</h1>
                     <h2>in the Era of the COVID-19 Pandemic</h2>
-                    <hr>
-                    <h6>
-                        Each year, the Bureau of Labor Statistics surveys thousands of households for the
-                        American Time Usage Survey, a project which tracks how Americans spend their time.
-                        This data helps illuminate how our society affords access to work, to leisure, and beyond.
-                        We hope to analyze how time usage was affected by the 2020 COVID pandemic.
-                    </h6>
-                    <hr>
-                    <h2>How has time spent doing different activities changed before and during the pandemic?</h2>
+                    <img src="images/people.png" alt="people" height="100">
+                    <img src="images/Clock1.gif" alt="clock" width="200" height="200">
+                    <img src="images/people2.png" alt="more people" height="90">
                 </div>
             </div>
 
-            <!-- graph -->
-            <div class="row justify-content-center" style="height: 60vh">
-                <div class="align-self-center" id="change-bar-chart" style="height: 100%; width: 100%"></div>
+            <!-- spacer -->
+            <div class="row justify-content-center" style="height: 3vh"></div>
 
+            <div class="row justify-content-center" style="height: 30vh; margin: auto; width: 80%">
+                <h6>
+                    The pandemic radically affected millions of American's day-to-day lives. Jobs were
+                    lost, schools were closed, and travel was limited. We want to understand the magnitude
+                    of this disruption through analyzing the ways people spent their time differently during 2020.
+                </h6>
+                <h6>
+                    Each year, the Bureau of Labor Statistics surveys roughly ten thousand households for the
+                    <b>American Time Usage Survey</b>, a project which tracks how Americans spend their time.
+                    This data helps track <i>how our society chooses to use our collective time</i> — on work, on leisure,
+                    on care, on volunteering. This also reveals how we prioritize or change certain behaviors during
+                    different time periods, like during a pandemic.
+                </h6>
             </div>
 
-<!--            &lt;!&ndash; brush &ndash;&gt;-->
-<!--            <div class="row justify-content-center" style="height: 10vh">-->
-<!--                <div class="align-self-center" id="timeline" style="height: 100%; width: 100%"></div>-->
-<!--            </div>-->
         </div>
     </div>
 </div>
@@ -72,6 +74,32 @@
 
             <div class="row justify-content-center" style="height: 80vh">
                 <div class="align-self-center" id="bubble-chart" style="width: 90%; height: 90%"></div>
+            </div>
+
+            <div class="row justify-content-center" style="height: 15vh">
+                <div class="align-self-center" style="height: 100%; width: 100%"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--1.5 Page-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 offset-2"
+             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
+
+            <!-- header -->
+            <div class="row justify-content-center" style="height: 15vh">
+                <div class="align-self-center">
+                    <h1>How has time spent doing different activities changed before and during the pandemic?</h1>
+                </div>
+            </div>
+
+            <!-- graph -->
+            <div class="row justify-content-center" style="height: 60vh">
+                <div class="align-self-center" id="change-bar-chart" style="height: 100%; width: 100%"></div>
+
             </div>
 
             <div class="row justify-content-center" style="height: 15vh">
