--- a/Template/Template/css/style.css
+++ b/Template/Template/css/style.css
@@ -1,4 +1,9 @@
 
+#title {
+  color: #d42000;
+  font-weight: bold;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #F0FFFF;
