--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -29,7 +29,7 @@
             <!-- header -->
             <div class="row justify-content-center" style="height: 60vh">
                 <div class="align-self-center">
-                    <h1>American Time Usage</h1>
+                    <h1 id="title">American Time Usage</h1>
                     <h2>in the Era of the COVID-19 Pandemic</h2>
                     <img src="images/people.png" alt="people" height="100">
                     <img src="images/Clock1.gif" alt="clock" width="200" height="200">
