--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -66,7 +66,7 @@
              style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
 
             <!-- header -->
-            <div class="row justify-content-center" style="height: 15vh" id="headingTimeSource">
+            <div class="row justify-content-center" style="height: 10vh; margin: auto; width: 80%" id="headingTimeSource">
                 <div class="align-self-center">
                     <h1><b>Work</b> is still the largest time source for people in 2020</h1>
                 </div>
@@ -76,7 +76,7 @@
                 <div class="align-self-center" id="bubble-chart" style="width: 90%; height: 90%"></div>
             </div>
 
-            <div class="row justify-content-center" style="height: 15vh">
+            <div class="row justify-content-center" style="height: 5vh">
                 <div class="align-self-center" style="height: 100%; width: 100%"></div>
             </div>
         </div>
@@ -90,9 +90,9 @@
              style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
 
             <!-- header -->
-            <div class="row justify-content-center" style="height: 15vh">
+            <div class="row justify-content-center" style="height: 20vh">
                 <div class="align-self-center">
-                    <h1>How has time spent doing different activities changed before and during the pandemic?</h1>
+                    <h1>How has time spent doing different activities changed from 2019 to 2020?</h1>
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
 
             </div>
 
-            <div class="row justify-content-center" style="height: 15vh">
+            <div class="row justify-content-center" style="height: 5vh">
                 <div class="align-self-center" style="height: 100%; width: 100%"></div>
             </div>
         </div>
