finished + refined stacked area chart

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -120,6 +120,36 @@
     </div>
 </div>
 
+<!--Fifth Page-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 offset-2"
+             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
+
+            <!-- header -->
+            <div class="row justify-content-center" style="height: 15vh">
+                <div class="align-self-center">
+                    <h1>Time Usage Over the Last Two Decades</h1>
+                </div>
+            </div>
+
+            <!-- graph -->
+            <div class="row justify-content-center" style="height: 65vh">
+                <div class="align-self-center" id="stacked-area-chart" style="height: 95%; width: 100%"></div>
+            </div>
+
+            <div class="row justify-content-center" style="height: 17vh; margin: auto; width: 80%">
+                <h6>Consistently throughout the last two decades, the largest proportions of time
+                    are spent on work, education, and sleep. The overall breakdown of average time per activity
+                    is surprisingly steady.</h6>
+                <h6>Occasionally, there are bumps in how much
+                    time certain activities get, like a bump around 2014 in <i>"government + civic activities"</i>
+                    (which might be from voting in the midterm elections that year).</h6>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--Second Page-->
 <div class="container-fluid">
     <div class="row">
@@ -207,34 +237,6 @@
                     As can be seen by the visualization above, the average number of hours worked are quite
                     consistent over the last two decades, including during the 2020 pandemic period.
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!--Fifth Page-->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-8 offset-2"
-             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
-
-            <!-- header -->
-            <div class="row justify-content-center" style="height: 15vh">
-                <div class="align-self-center">
-                    <h1>Time Usage Over the Last Two Decades</h1>
-                </div>
-            </div>
-
-            <!-- graph -->
-            <div class="row justify-content-center" style="height: 60vh">
-                <div class="align-self-center" id="stacked-area-chart" style="height: 100%; width: 100%"></div>
-            </div>
-
-            <div class="row justify-content-center" style="height: 13vh">
-                <h6>Consistently throughout the data, the largest proportions of time
-                    are spent on work, education, and sleep. Occasionally, there are bumps in how much
-                    time certain activities get, like a bump around 2014 in "government activities" <i>(which might
-                        be related to voting in the midterm elections that year)</i>.</h6>
             </div>
         </div>
     </div>
