style and functionality improvements

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<!--1.5 Page-->
+<!--Second Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -120,7 +120,7 @@
     </div>
 </div>
 
-<!--Fifth Page-->
+<!--Third Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -150,7 +150,7 @@
     </div>
 </div>
 
-<!--Second Page-->
+<!--Fourth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -181,7 +181,7 @@
     </div>
 </div>
 
-<!--Third Page-->
+<!--Fifth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -214,35 +214,62 @@
     </div>
 </div>
 
-<!--Fourth Page-->
+<!--Sixth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
              style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
 
             <!-- header -->
-            <div class="row justify-content-center" style="height: 15vh">
+            <div class="row justify-content-center" style="height: 20vh">
                 <div class="align-self-center">
-                    <h1>Average Hours Worked per Week by Income</h1>
+                    <h1>The Unrelenting 40-Hour Workweek</h1>
+                    <h2>Average Hours Worked per Week by Income</h2>
                 </div>
             </div>
             <div class="row justify-content-center" style="height: 60vh">
                 <div class="align-self-center" id="avg-hours-worked" style="height: 100%; width: 100%"></div>
             </div>
 
-            <div class="row justify-content-center" style="height: 15vh">
-                <div class="align-self-center" style="height: 100%; width: 80%">
-                    Each colored line represents a different year.
-                    The relationship between income and hours worked is pretty flat — with actually the highest and lowest income earners working the most hours.
+            <div class="row justify-content-center" style="height: 30vh; margin: auto; width: 80%">
+                <hr>
+                <h6><b><i>Each colored line represents a different year.</b></i></h6>
+                <div class="col col-lg-3">
+                    <label for="year"><b>Highlight a Year:</b></label>
+                    <select class="form-control" id="year" onchange="highlightYearFunction()">
+                        <option value="2020">2020</option>
+                        <option value="2019">2019</option>
+                        <option value="2018">2018</option>
+                        <option value="2017">2017</option>
+                        <option value="2016">2016</option>
+                        <option value="2015">2015</option>
+                        <option value="2014">2014</option>
+                        <option value="2013">2013</option>
+                        <option value="2012">2012</option>
+                        <option value="2011">2011</option>
+                        <option value="2010">2010</option>
+                        <option value="2009">2009</option>
+                        <option value="2008">2008</option>
+                        <option value="2007">2007</option>
+                        <option value="2006">2006</option>
+                        <option value="2005">2005</option>
+                        <option value="2004">2004</option>
+                        <option value="2003">2003</option>
+                    </select>
+                </div>
+                <div class="col">
+                <div class="align-self-center" style="height: 100%; width: 100%">
+                    <p>Overall, the relationship between income and hours worked is pretty flat — with actually the highest and lowest income earners working the most hours.
                     As can be seen by the visualization above, the average number of hours worked are quite
-                    consistent over the last two decades, including during the 2020 pandemic period.
+                        consistent over the last two decades, including during the 2020 pandemic.</p>
+                </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<!--Sixth Page-->
+<!--Seventh Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -279,7 +306,7 @@
     </div>
 </div>
 
-<!--Seventh Page-->
+<!--Eighth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -306,7 +333,7 @@
     </div>
 </div>
 
-<!--Eighth Page-->
+<!--Ninth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
@@ -336,7 +363,7 @@
     </div>
 </div>
 
-<!--Ninth Page-->
+<!--Tenth Page-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
