--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -104,7 +104,7 @@
                     <select class="form-control" id="ranking-type" onchange="selectChanged()">
                         <option value="change">Percent Change</option>
                         <option value="minChange">Absolute Change in Minutes</option>
-                        <option value="avgTime19">2019 Average Time by Activity Time</option>
+                        <option value="avgTime19">2019 Average Time by Activity</option>
                         <option value="avgTime20">2020 Average Time by Activity</option>
                     </select>
                 </div>
