fixed second typo

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -233,7 +233,7 @@
 
             <div class="row justify-content-center" style="height: 30vh; margin: auto; width: 80%">
                 <hr>
-                <h6><b><i>Each colored line represents a different year.</b></i></h6>
+                <h6><b><i>Each colored line represents a different year.</i></b></h6>
                 <div class="col col-lg-3">
                     <label for="year"><b>Highlight a Year:</b></label>
                     <select class="form-control" id="year" onchange="highlightYearFunction()">
